poc/tests/errors/test_FplMalformedGlobalId_property_namespace.fpl
TestMalformedGlobalId
{
    theory
    {
        class TestDerived: obj
        {
            myVar: obj

            mand TestParent TestMalformedGlobalId()
            {
                self:=myVar
            }
        }
    }
}

##############################

FplMalformedGlobalId:7:41: The global id TestNamespace.TestDerived.TestNamespace[] should consist of different names.